--- a/new/app/views/form.html
+++ b/new/app/views/form.html
@@ -24,10 +24,10 @@
     <h1><span>1</span> Subí las fotos de tu DNI</h1>
 
     <label for="foto1">Frente DNI tarjeta o primera hoja con foto del DNI libro:</label>
-    <input type="file" name="foto1" id="foto1">
+    <input type="file" name="foto1" id="foto1" title="Frente DNI tarjeta o primera hoja con foto del DNI libro." required>
 
     <label for="foto2">Dorso DNI tarjeta o segunda hoja del DNI libro:</label>
-    <input type="file" name="foto2" id="foto2">
+    <input type="file" name="foto2" id="foto2" title="Dorso DNI tarjeta o segunda hoja del DNI libro." required>
 
     <label for="foto3">En el caso que haya cambio de domicilio en DNI libro, subirlo también:</label>
     <input type="file" name="foto3" id="foto3">
