--- a/new/app/views/form.html
+++ b/new/app/views/form.html
@@ -13,7 +13,7 @@
 
 <main>
   <header>
-    <img class="logo" src="img/logo.png" alt="Partido De La Red">
+    <img class="logo" width="118" src="img/logo1.svg" onerror="this.onerror=null;this.src='img/logo.png'" alt="Partido De La Red">
     <nav>
       <button class="active" type="button">Afiliarme</button>
       <button type="button">Más Info</button>
