--- a/new/css/app.styl
+++ b/new/css/app.styl
@@ -33,7 +33,8 @@ header {
 
   .logo {
     display: block;
-    margin: 0 auto .3em;
+    margin: 1.5em auto;
+    padding: 0;
   }
 
   nav {
@@ -43,7 +44,7 @@ header {
       position: relative;
       display: inline-block;
       margin: 0 .8em;
-      padding: .4em 0 0;
+      padding: 0;
       border: none;
       border-radius: 0;
       font-family: inherit;
